--- a/admin.html
+++ b/admin.html
@@ -8,49 +8,112 @@
         body { font-family: sans-serif; background: #f4f4f4; padding: 20px; }
         .card { background: white; padding: 20px; border-radius: 15px; margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
         h2 { color: #9C27B0; }
-        input, button { padding: 10px; margin: 5px 0; width: 100%; border-radius: 5px; border: 1px solid #ddd; }
+        input, button { padding: 10px; margin: 5px 0; width: 100%; border-radius: 5px; border: 1px solid #ddd; box-sizing: border-box; }
         button { background: #9C27B0; color: white; border: none; cursor: pointer; font-weight: bold; }
         button:hover { background: #7B1FA2; }
+        #adminContent { display: none; } /* Hidden until login */
+        #loginOverlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #9C27B0; display: flex; justify-content: center; align-items: center; z-index: 1000; }
+        .login-box { background: white; padding: 40px; border-radius: 20px; text-align: center; width: 300px; }
     </style>
 </head>
 <body>
 
-    <h1>Braita Dashboard</h1>
-
-    <div class="card">
-        <h2>Add New Quiz</h2>
-        <input type="text" id="qNum" placeholder="Quiz Number (e.g. quiz00003)">
-        <input type="text" id="qText" placeholder="Question text">
-        <input type="text" id="ans1" placeholder="Answer 1">
-        <input type="text" id="ans2" placeholder="Answer 2">
-        <input type="text" id="ans3" placeholder="Answer 3">
-        <input type="text" id="ans4" placeholder="Answer 4">
-        <input type="text" id="correctAns" placeholder="Correct Answer (Exact text)">
-        <button onclick="uploadQuiz()">Upload Quiz</button>
+    <div id="loginOverlay">
+        <div class="login-box">
+            <h2>Admin Login</h2>
+            <p>Enter 6-digit code</p>
+            <input type="password" id="adminPass" placeholder="******" maxlength="10">
+            <button onclick="attemptLogin()">Login</button>
+        </div>
     </div>
 
-    <div class="card">
-        <h2>App Update Management</h2>
-        <p>Set Version to trigger update dialog in app.</p>
-        <input type="number" id="vNum" placeholder="New Version (e.g. 2)">
-        <button onclick="updateApp(1)">Set Update Available (1)</button>
-        <button onclick="updateApp(0)" style="background: #666;">Turn Off Update (0)</button>
+    <div id="adminContent">
+        <h1>Braita Dashboard</h1>
+
+        <div class="card">
+            <h2>Add New Quiz</h2>
+            <input type="text" id="qNum" placeholder="Quiz Number (e.g. quiz00003)">
+            <input type="text" id="qText" placeholder="Question text">
+            <input type="text" id="ans1" placeholder="Answer 1">
+            <input type="text" id="ans2" placeholder="Answer 2">
+            <input type="text" id="ans3" placeholder="Answer 3">
+            <input type="text" id="ans4" placeholder="Answer 4">
+            <input type="text" id="correctAns" placeholder="Correct Answer (Exact text)">
+            <button onclick="uploadQuiz()">Upload Quiz</button>
+        </div>
+
+        <div class="card">
+            <h2>App Update Management</h2>
+            <input type="number" id="vNum" placeholder="New Version (e.g. 2)">
+            <button onclick="updateApp(1)">Set Update Available (1)</button>
+            <button onclick="updateApp(0)" style="background: #666;">Turn Off Update (0)</button>
+        </div>
     </div>
 
     <script>
-        // REPLACE WITH YOUR PROJECT CONFIG
         const firebaseConfig = {
             apiKey: "AIzaSyBCIH-FircSWODcAWJZK2d971b9IqzvbWQ",
             databaseURL: "https://braita-cf3e7-default-rtdb.firebaseio.com",
             projectId: "braita-cf3e7",
-            // ... add other keys from Firebase Console
         };
 
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
+        // 1. GENERATE OR RETRIEVE BROWSER DEVICE ID
+        let adminDeviceId = localStorage.getItem('adminDeviceId');
+        if (!adminDeviceId) {
+            adminDeviceId = 'admin_' + Math.random().toString(36).substr(2, 9);
+            localStorage.setItem('adminDeviceId', adminDeviceId);
+        }
+
+        // 2. CHECK SESSION ON LOAD
+        window.onload = function() {
+            checkSession();
+        };
+
+        function checkSession() {
+            database.ref('AdminSessions/' + adminDeviceId).get().then((snapshot) => {
+                if (snapshot.exists()) {
+                    const lastLogin = snapshot.val().lastLogin;
+                    const currentTime = new Date().getTime();
+                    const twentyFourHours = 24 * 60 * 60 * 1000;
+
+                    if (currentTime - lastLogin < twentyFourHours) {
+                        showAdminPanel();
+                    }
+                }
+            });
+        }
+
+        function attemptLogin() {
+            const enteredPass = document.getElementById('adminPass').value;
+            
+            // Fetch password from Firebase (Matches your AdminLiginKey node)
+            database.ref('AdminLiginKey/Password').get().then((snapshot) => {
+                if (snapshot.exists() && snapshot.val() === enteredPass) {
+                    // Save session to Firebase
+                    database.ref('AdminSessions/' + adminDeviceId).set({
+                        lastLogin: new Date().getTime(),
+                        deviceId: adminDeviceId
+                    }).then(() => {
+                        showAdminPanel();
+                    });
+                } else {
+                    alert("Incorrect Password!");
+                }
+            });
+        }
+
+        function showAdminPanel() {
+            document.getElementById('loginOverlay').style.display = 'none';
+            document.getElementById('adminContent').style.display = 'block';
+        }
+
         function uploadQuiz() {
             const id = document.getElementById('qNum').value;
+            if(!id) return alert("Enter Quiz Number!");
+
             const data = {
                 question: document.getElementById('qText').value,
                 correctAnswer: document.getElementById('correctAns').value,
@@ -60,27 +123,21 @@
                     document.getElementById('ans3').value,
                     document.getElementById('ans4').value
                 ]
-
-                .then(() => {
-    alert("Quiz Added!");
-    document.getElementById('qNum').value = "";
-    document.getElementById('qText').value = "";
-    document.getElementById('ans1').value = "";
-    document.getElementById('ans2').value = "";
-    document.getElementById('ans3').value = "";
-    document.getElementById('ans4').value = "";
-    document.getElementById('correctAns').value = "";
-})
             };
             
-            // Matches your Quizzes/Quizzes structure
-            database.ref('Quizzes/Quizzes/' + id).set(data)
-                .then(() => alert("Quiz Added!"))
-                .catch(err => console.error(err));
+            database.ref('Quizzes/Quizzes/' + id).set(data).then(() => {
+                alert("Quiz Added!");
+                // Clear inputs
+                ['qNum','qText','ans1','ans2','ans3','ans4','correctAns'].forEach(i => {
+                    document.getElementById(i).value = "";
+                });
+            }).catch(err => alert("Error: " + err));
         }
 
         function updateApp(status) {
             const version = document.getElementById('vNum').value;
+            if(!version) return alert("Enter Version Number!");
+
             database.ref('Updates').update({
                 Avalable: status,
                 Version: parseInt(version)
