--- a/ManageQuizzes.html
+++ b/ManageQuizzes.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Braita | Edit Quiz</title>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-database-compat.js"></script>
     <style>
         :root { --primary: #9C27B0; --outer-bg: #212121; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--outer-bg); margin: 0; padding: 20px; display: flex; justify-content: center; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--outer-bg); margin: 0; padding: 10px; display: flex; justify-content: center; }
         .frame { background: white; width: 100%; max-width: 900px; min-height: 90vh; border-radius: 4px; overflow: hidden; }
         .banner { background: var(--primary); color: white; padding: 25px; text-align: center; font-size: 20px; position: relative; }
-        .btn-back { position: absolute; left: 20px; top: 50%; transform: translateY(-50%); background: #424242; color: white; border: none; padding: 5px 15px; border-radius: 2px; cursor: pointer; font-size: 11px; }
-        .content { padding: 30px; }
-        .field-group { margin-bottom: 15px; text-align: left; }
-        .field-label { font-size: 12px; color: #666; margin-bottom: 5px; display: block; font-weight: 600; padding-left: 5px; }
-        input { width: 100%; padding: 12px; border: 1px solid #E1BEE7; border-radius: 2px; background: #F3E5F5; box-sizing: border-box; }
-        .search-bar { width: 100%; padding: 12px; border: 1.5px solid var(--primary); border-radius: 25px; margin: 30px 0; background: white; font-size: 13px; }
-        table { width: 100%; border-collapse: separate; border-spacing: 0 10px; }
-        th { background: #8E7A8E; color: white; padding: 12px; font-size: 12px; }
-        td { background: #F8F8F8; padding: 12px; text-align: center; border-bottom: 1px solid #EEE; font-size: 13px; }
-        .btn-edit { background: var(--primary); color: white; border: none; padding: 5px 15px; border-radius: 2px; cursor: pointer; }
+        .btn-back { position: absolute; left: 15px; top: 50%; transform: translateY(-50%); background: #424242; color: white; border: none; padding: 6px 15px; border-radius: 4px; cursor: pointer; font-size: 11px; }
+        .content { padding: 20px; }
+        .field-group { margin-bottom: 12px; text-align: left; }
+        .field-label { font-size: 11px; color: #666; margin-bottom: 4px; display: block; font-weight: 600; padding-left: 4px; }
+        input { width: 100%; padding: 10px; border: 1px solid #E1BEE7; border-radius: 4px; background: #F3E5F5; box-sizing: border-box; }
+        .search-bar { width: 100%; padding: 12px; border: 1.5px solid var(--primary); border-radius: 25px; margin: 25px 0; background: white; font-size: 13px; box-sizing: border-box; }
+        .table-wrap { overflow-x: auto; }
+        table { width: 100%; border-collapse: separate; border-spacing: 0 10px; min-width: 500px; }
+        th { background: #8E7A8E; color: white; padding: 10px; font-size: 12px; }
+        td { background: #F8F8F8; padding: 10px; text-align: center; border-bottom: 1px solid #EEE; font-size: 13px; }
+        .btn-edit { background: var(--primary); color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer; }
     </style>
 </head>
 <body>
     <div class="frame">
         <div class="banner"><button class="btn-back" onclick="location.href='Admin.html'">Back</button>Edit Quiz</div>
         <div class="content">
-            <div style="text-align:center; color:var(--primary); font-size:14px; font-weight:bold; margin-bottom:20px;">Add New Quiz Question</div>
+            <div style="text-align:center; color:var(--primary); font-size:14px; font-weight:bold; margin-bottom:20px;">Edit Existing Quiz Question</div>
             <div class="field-group"><span class="field-label">Quiz Number</span><input type="text" id="qKey"></div>
             <div class="field-group"><span class="field-label">Question</span><input type="text" id="qText"></div>
             <div class="field-group"><span class="field-label">Answer 1</span><input type="text" id="ans1"></div>
@@ -33,10 +36,9 @@
             <div class="field-group"><span class="field-label">Answer 3</span><input type="text" id="ans3"></div>
             <div class="field-group"><span class="field-label">Answer 4</span><input type="text" id="ans4"></div>
             <div class="field-group"><span class="field-label">Correct Answer</span><input type="text" id="correctAns"></div>
-            <button onclick="save()" style="background:var(--primary); color:white; width:100%; padding:12px; border:none; border-radius:4px; font-weight:bold; cursor:pointer;">Submit Quiz</button>
-            
+            <button onclick="save()" style="background:var(--primary); color:white; width:100%; padding:12px; border:none; border-radius:4px; font-weight:bold; cursor:pointer;">Update & Save</button>
             <input type="text" class="search-bar" id="search" onkeyup="filter()" placeholder="🔍 Search Quiz Key or Question...">
-            <table><thead><tr><th>Key</th><th>Question</th><th>Action</th></tr></thead><tbody id="list"></tbody></table>
+            <div class="table-wrap"><table><thead><tr><th>Key</th><th>Question</th><th>Action</th></tr></thead><tbody id="list"></tbody></table></div>
         </div>
     </div>
     <script>
@@ -46,9 +48,7 @@
         function load() {
             database.ref('Quizzes/Quizzes').on('value', snap => {
                 const body = document.getElementById('list'); body.innerHTML = "";
-                snap.forEach(c => {
-                    body.innerHTML += `<tr class="q-row"><td>${c.key}</td><td style="text-align:left">${c.val().question}</td><td><button class="btn-edit" onclick="edit('${c.key}')">Edit</button></td></tr>`;
-                });
+                snap.forEach(c => { body.innerHTML += `<tr class="q-row"><td>${c.key}</td><td style="text-align:left">${c.val().question.substring(0,40)}...</td><td><button class="btn-edit" onclick="edit('${c.key}')">Edit</button></td></tr>`; });
             });
         }
         function edit(key) {
@@ -67,7 +67,7 @@
         function save() { 
             const key = document.getElementById('qKey').value;
             const data = { question: document.getElementById('qText').value, correctAnswer: document.getElementById('correctAns').value, answers: [document.getElementById('ans1').value, document.getElementById('ans2').value, document.getElementById('ans3').value, document.getElementById('ans4').value] };
-            database.ref('Quizzes/Quizzes/'+key).set(data).then(() => { alert("Saved!"); location.reload(); });
+            database.ref('Quizzes/Quizzes/'+key).set(data).then(() => { alert("Updated!"); location.reload(); });
         }
         load();
     </script>
