--- a/Admin.html
+++ b/Admin.html
@@ -78,7 +78,7 @@
                     <input type="number" id="vNum" placeholder="Version Number">
                     <div class="update-btns">
                         <button class="btn btn-purple" onclick="updateApp(1)">Enable Update</button>
-                        <button class="btn" style="background:#FF0000; width:100%;" onclick="updateApp(0)">Disable Update</button>
+                        <button class="btn" style="background:#790404b6; width:100%;" onclick="updateApp(0)">Disable Update</button>
                     </div>
                 </div>
             </div>
